octoprint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octopi-http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: octoprint-svc
            port:
              number: 80
